syntax = "proto3";

package rpc;

option go_package = "../rpc3";

message RpcHead{
  int64 Id = 1;//token
  uint32 SocketId = 2;
  string ActorName = 7;
  string Reply = 8;//call sessionid
  int32 Code = 9;
  string Msg = 10;
}

message RpcPacket{
  string FuncName = 1;
  int32 ArgLen = 2;
  RpcHead RpcHead = 3;
  bytes RpcBody = 4;
}

//原始包
message Packet{
  uint32 Id = 1;//socketid
  string Reply = 2;//call sessionid
  bytes Buff = 3;//buff
}